files/style.css
body {
    margin: 0;
    background-color: #535353;
    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
}

#wrapper {
    width: 95vw;
    max-width: 950px;
    margin: 0 auto;
    background-color: #7b7b7b;
}

#main {
    margin: 0 auto;
    padding-top: 10px;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: space-around;
    border-radius: 0 0 5px 5px;
}

header {
    background-color: #c6c6c6;
    width: 100%;
    display: flex;
    border-radius: 0 0 5px 5px;
}

header img {
    width: 48.5%;
    padding-right: 3%;
}

header div {
    width: 49%;
    padding-right: 1%;
}

a[href*="mspaforums.com"], .missing {
    color: red !important;
    font-weight: bold;
}

div.img {
    background-color: #c6c6c6;
    padding: 10px;
    height: 80px;
    width: 45%;
    margin-bottom: 10px;
    border-radius: 3px;
}

img {
    border-radius: 3px;
}

div.img p, div.img a, div.img ul {
    display: none;
}

div.img img {
    cursor: pointer;
    margin: 0 auto;
}

div.open {
    height: 100%;
}

div.open p, div.open ul {
    display: block;
}

div.open a {
    display: inline;
}

